Finished Residences page and fixed a scrollbar bug where to scroll bars would appear affecting all pages

--- a/t1/SEP3BlazorT1Client/SEP3BlazorT1Client/Pages/Residences/Residences.razor.scss
+++ b/t1/SEP3BlazorT1Client/SEP3BlazorT1Client/Pages/Residences/Residences.razor.scss
@@ -3,6 +3,14 @@
   animation-name: fade-in;
   animation-duration: 2s;
   animation-fill-mode: forwards;
+  
+  .residence-filters{
+    margin-bottom: 1rem;
+  }
+  
+  .residence-directory{
+    gap: 2rem;
+  }
 }
 
 @keyframes fade-in {
